tests/programs/invalid/NoExplicitConstructorExample.java
public class NoExplicitConstructorExample {
    // No explicit constructor, invalid if there's no default constructor
}
